# projgeom-cpp

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  AGENTS.md  CMakeLists.txt  GEMINI.md  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  ck__concepts_8hpp.html  ck__concepts_8hpp__incl.map  ck__concepts_8hpp__incl.md5  ck__concepts_8hpp_source.html  ck__plane_8hpp.html  ck__plane_8hpp__dep__incl.map  ck__plane_8hpp__dep__incl.md5  ck__plane_8hpp__incl.map  ck__plane_8hpp__incl.md5  ck__plane_8hpp_source.html  classEllipticLine-members.html  classEllipticLine.html  classEllipticLine__inherit__graph.map  classEllipticLine__inherit__graph.md5  classEllipticPoint-members.html  classEllipticPoint.html  classEllipticPoint__inherit__graph.map  classEllipticPoint__inherit__graph.md5  classHyperbolicLine-members.html  classHyperbolicLine.html  classHyperbolicLine__inherit__graph.map  classHyperbolicLine__inherit__graph.md5  classHyperbolicPoint-members.html  classHyperbolicPoint.html  classHyperbolicPoint__inherit__graph.map  classHyperbolicPoint__inherit__graph.md5  classMyCKLine-members.html  classMyCKLine.html  classMyCKLine__coll__graph.map  (+251 more)
bench/: BM_projgeom.cpp
cmake/: CPM.cmake
documentation/: CMakeLists.txt  Doxyfile  Doxyfile.test  conf.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_19.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_3.js  (+46 more)
standalone/: CMakeLists.txt
standalone/source/: main.cpp
(+71 files in other folders)
